a mass of small fixes

--- a/src/scss/base/_headings.scss
+++ b/src/scss/base/_headings.scss
@@ -2,8 +2,11 @@
     #HEADINGS
 \*------------------------------------*/
 
-h1, h2, h3, h4 {
-  font-family: 'Enriqueta', serif;
+h1,
+h2,
+h3,
+h4 {
+  font-family: 'Prata', serif;
 }
 
 h1 {
