--- a/src/scss/components/_b-timeline.scss
+++ b/src/scss/components/_b-timeline.scss
@@ -23,24 +23,34 @@
 }
 .b-timeline {
   position: relative;
-  background: linear-gradient(180deg, rgba(21, 0, 61, 0.8), rgba(21, 0, 61, 0.2)), url(../../assets/img/space-sm.webp);
+  background: linear-gradient(
+      180deg,
+      rgba(21, 0, 61, 0.8),
+      rgba(21, 0, 61, 0.2)
+    ),
+    url(../../assets/img/space-sm.webp);
   display: flex;
   flex-direction: column;
 }
 
 @media only screen and (min-width: 770px) {
   .b-timeline {
-    background: linear-gradient(180deg, rgba(21, 0, 61, 0.8), rgba(21, 0, 61, 0.2)), url(../../assets//img/space-bg.webp);
+    background: linear-gradient(
+        180deg,
+        rgba(21, 0, 61, 0.8),
+        rgba(21, 0, 61, 0.2)
+      ),
+      url(../../assets//img/space-bg.webp);
     position: relative;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-  }  
+  }
 }
 
 .b-timeline__path {
   position: absolute;
-  border-left: 3px solid #025A8F;
+  border-left: 3px solid #025a8f;
   min-height: 100%;
   right: 10%;
   bottom: 0;
@@ -49,12 +59,12 @@
 @media only screen and (min-width: 770px) {
   .b-timeline__path {
     position: absolute;
-    border-left: 3px solid #025A8F;
+    border-left: 3px solid #025a8f;
     min-height: 100%;
     left: 50%;
     bottom: 0;
     width: 1%;
-  }  
+  }
 }
 
 .b-timeline__rocket {
@@ -67,27 +77,36 @@
 
 .b-timeline__rocket img {
   width: 50%;
-  animation: flydown 0.8s forwards; 
+  animation: flydown 0.8s forwards;
 }
 
 @keyframes flydown {
-  0% {transform: translateY(0%); opacity: 0;}
-  10% {transform: translateY(50%); opacity: .2;}
-  100% {transform: translateY(100%); opacity: 1;}
+  0% {
+    transform: translateY(0%);
+    opacity: 0;
+  }
+  10% {
+    transform: translateY(50%);
+    opacity: 0.2;
+  }
+  100% {
+    transform: translateY(100%);
+    opacity: 1;
+  }
 }
 
 .b-timeline__rocket--hidden {
- display: none;
+  display: none;
 }
 
 .b-timeline__item {
-  border-left: 3px solid #025A8F;
+  border-left: 3px solid #025a8f;
   background-color: rgb(0, 0, 0);
-  border: 5px solid #025A8F;
+  border: 5px solid #025a8f;
   display: flex;
   width: 80%;
   height: 100%;
-  margin: 1em 0 1em .5em;
+  margin: 1em 0 1em 0.5em;
   z-index: 7;
 }
 
@@ -96,30 +115,29 @@
     display: flex;
     width: 30%;
     margin: 5em 5em;
-  } 
+  }
 
   .b-timeline__rocket {
-      right: 50%;
+    right: 50%;
   }
 
   .b-timeline__rocket img {
-      width: 48%;
+    width: 48%;
   }
 }
 
 @media only screen and (min-width: 1200px) {
   .b-timeline__rocket {
-      right: 50%;
-      top: 0%;
+    right: 50%;
+    top: 0%;
   }
 
   .b-timeline__rocket img {
-      width: 50%;
+    width: 50%;
   }
 }
 
 @media only screen and (min-width: 770px) {
-  
   .b-timeline__item__event-left {
     align-self: flex-start;
   }
@@ -129,26 +147,26 @@
   }
 
   .b-timeline__item__event-left::after {
-    content: "";
+    content: '';
     position: relative;
     height: 3.7em;
     left: 18%;
     top: 48px;
-    border: 2px solid #025A8F;
+    border: 2px solid #025a8f;
     transform: rotate(90deg);
     margin-left: -4px;
   }
 
   .b-timeline__item__event-right::before {
-    content: "";
+    content: '';
     position: relative;
     height: 3.7em;
     right: 32px;
     top: 50px;
-    border: 2px solid #025A8F;
+    border: 2px solid #025a8f;
     transform: rotate(90deg);
     margin-left: -4px;
-  } 
+  }
 }
 
 @media only screen and (min-width: 784px) {
@@ -180,11 +198,11 @@
   }
 }
 
-$mqs:     810px 820px 830px 840px 850px 860px 870px 880px 890px 900px;
-$heights: 4.2em 4.3em 4.4em 4.5em 4.6em 4.7em 4.8em 4.9em 5.0em 5.1em;
-$left:    18%   18%   18%   19%   19%   19%   20%   20%   20%   20%;
-$right:   18%   18%   18%   17%   17%   17%   17%   17%   18%   18%;
-$top:     51px  52px  52px  53px  53px  54px  28px  27px  22px  20px;
+$mqs: 810px 820px 830px 840px 850px 860px 870px 880px 890px 900px;
+$heights: 4.2em 4.3em 4.4em 4.5em 4.6em 4.7em 4.8em 4.9em 5em 5.1em;
+$left: 18% 18% 18% 19% 19% 19% 20% 20% 20% 20%;
+$right: 18% 18% 18% 17% 17% 17% 17% 17% 18% 18%;
+$top: 51px 52px 52px 53px 53px 54px 28px 27px 22px 20px;
 
 @for $i from 1 through length($mqs) {
   $media: nth($mqs, $i);
@@ -206,11 +224,11 @@ $top:     51px  52px  52px  53px  53px  54px  28px  27px  22px  20px;
   }
 }
 
-$mqs:     910px 930px 950px 970px 990px 1010px 1030px 1050px 1080px 1100px;
-$heights: 5.2em 5.5em 5.6em 5.7em 6.0em 6.2em  6.5em  6.8em  7.1em  7.3em;
-$left:    20%    21%  21%   22%   21%   22%    22%    22%    23%    22%;
-$right:   18%   18%   19%   17%   17%   17%    17%    17%    19%    20%;
-$top:     28px  27px  22px  20px  20px  20px   20px   16px   12px   10px;
+$mqs: 910px 930px 950px 970px 990px 1010px 1030px 1050px 1080px 1100px;
+$heights: 5.2em 5.5em 5.6em 5.7em 6em 6.2em 6.5em 6.8em 7.1em 7.3em;
+$left: 20% 21% 21% 22% 21% 22% 22% 22% 23% 22%;
+$right: 18% 18% 19% 17% 17% 17% 17% 20% 19% 20%;
+$top: 28px 27px 22px 20px 20px 20px 20px 16px 12px 10px;
 
 @for $i from 1 through length($mqs) {
   $media: nth($mqs, $i);
@@ -232,11 +250,11 @@ $top:     28px  27px  22px  20px  20px  20px   20px   16px   12px   10px;
   }
 }
 
-$mqs:     1100px 1140px 1160px 1200px 1250px 1300px 1350px 1400px 1450px 1500px;
-$heights: 7.3em  7.8em  8.2em  8.6em  9.1em  9.7em  10.3em 10.9em 11.5em 12.1em;
-$left:    23%    23%    23%    24%    24%    24%    24%    25%    25%    25%;
-$right:   18%    18%    20%    19%    22%    23%    23%    24%    23%    25%;
-$top:     10px   10px   10px   10px   10px   10px   10px   10px   10px   10px;
+$mqs: 1100px 1140px 1160px 1200px 1250px 1300px 1350px 1400px 1450px 1500px;
+$heights: 7.3em 7.8em 8.2em 8.6em 9.1em 9.7em 10.3em 10.9em 11.5em 12.1em;
+$left: 23% 23% 23% 24% 24% 24% 24% 25% 25% 25%;
+$right: 18% 18% 20% 19% 22% 23% 23% 24% 23% 25%;
+$top: 10px 10px 10px 10px 10px 10px 10px 10px 10px 10px;
 
 @for $i from 1 through length($mqs) {
   $media: nth($mqs, $i);
@@ -260,7 +278,7 @@ $top:     10px   10px   10px   10px   10px   10px   10px   10px   10px   10px;
 
 @media only screen and (min-width: 1520px) {
   .b-timeline__item__event-left::after {
-      content: none;
+    content: none;
   }
   .b-timeline__item__event-right::before {
     content: none;
@@ -272,8 +290,8 @@ $top:     10px   10px   10px   10px   10px   10px   10px   10px   10px   10px;
   }
 }
 
-
-@media only screen and (min-width: 770px) {}
+@media only screen and (min-width: 770px) {
+}
 
 .b-timeline__item__content {
   flex-grow: 2;
@@ -293,7 +311,7 @@ $top:     10px   10px   10px   10px   10px   10px   10px   10px   10px   10px;
 
 .b-timeline__item__date {
   font-size: 1.4rem;
-  padding: .2rem;
+  padding: 0.2rem;
   text-align: center;
   margin: 0;
 }
@@ -301,7 +319,7 @@ $top:     10px   10px   10px   10px   10px   10px   10px   10px   10px   10px;
 @media only screen and (min-width: 770px) {
   .b-timeline__item__date {
     font-size: 1.4rem;
-    padding: .2rem;
+    padding: 0.2rem;
     text-align: center;
     margin: 0;
   }
@@ -310,7 +328,7 @@ $top:     10px   10px   10px   10px   10px   10px   10px   10px   10px   10px;
 @media only screen and (min-width: 1200px) {
   .b-timeline__item__date {
     font-size: 1.8rem;
-    padding: .4rem;
+    padding: 0.4rem;
   }
 }
 
@@ -368,7 +386,7 @@ $top:     10px   10px   10px   10px   10px   10px   10px   10px   10px   10px;
 }
 
 .b-timeline__item__launch-true {
-  background-color: #025A8F;
+  background-color: #025a8f;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -377,7 +395,7 @@ $top:     10px   10px   10px   10px   10px   10px   10px   10px   10px   10px;
 
 @media only screen and (min-width: 770px) {
   .b-timeline__item__launch-true {
-    background-color: #025A8F;
+    background-color: #025a8f;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -404,14 +422,14 @@ $top:     10px   10px   10px   10px   10px   10px   10px   10px   10px   10px;
 .b-timeline__item__event {
 }
 
-@media only screen and (min-width: 770px) {}
+@media only screen and (min-width: 770px) {
+}
 
 .b-timeline__item__img {
   display: none;
 }
 
 @media only screen and (min-width: 1520px) {
-
 }
 
 @media only screen and (min-width: 770px) {
@@ -477,7 +495,7 @@ $top:     10px   10px   10px   10px   10px   10px   10px   10px   10px   10px;
 
 .b-timeline__mars__text h2,
 .b-timeline__mars__text h3 {
-  margin: 0 1em;;
+  margin: 0 1em;
 }
 
 .b-timeline__mars__btn {
@@ -503,8 +521,6 @@ $top:     10px   10px   10px   10px   10px   10px   10px   10px   10px   10px;
   .b-timeline__mars__btn {
     bottom: 40%;
   }
-
-  
 }
 
 @media only screen and (min-width: 770px) {
@@ -549,14 +565,14 @@ $top:     10px   10px   10px   10px   10px   10px   10px   10px   10px   10px;
   .b-timeline__mars img {
     height: 120%;
     width: 120%;
-  } 
+  }
 }
 
 @media only screen and (min-width: 1400px) {
   .b-timeline__mars img {
     height: 140%;
     width: 140%;
-  } 
+  }
 }
 
 .b-timeline__mars__timetable-link {
@@ -569,7 +585,7 @@ $top:     10px   10px   10px   10px   10px   10px   10px   10px   10px   10px;
 @media only screen and (min-width: 710px) {
   .b-timeline__mars__timetable-link {
     bottom: 28%;
-  } 
+  }
 }
 
 #viewport {
