--- a/src/scss/base/_elements.scss
+++ b/src/scss/base/_elements.scss
@@ -2,7 +2,8 @@
     #ELEMENTS
 \*------------------------------------*/
 
-html, body {
+html,
+body {
   color: #fff;
   font-size: 1.8rem;
   overflow: auto;
@@ -13,6 +14,12 @@ html {
   z-index: 1;
   scroll-behavior: smooth;
 }
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: inherit;
+}
+
+#root {
+  margin-top: -2rem;
 }
