--- a/src/scss/components/_b-join.scss
+++ b/src/scss/components/_b-join.scss
@@ -2,13 +2,13 @@
     #JOIN FORM
 \*------------------------------------*/
 .b-join {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    margin: 0 .5em;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  margin: 0 0.5em;
 }
 
 .b-join__header {
@@ -25,7 +25,11 @@
 }
 
 .b-join__form {
-  background: linear-gradient(180deg, rgba(21, 0, 61, 0.9), rgba(21, 0, 61, 0.6));
+  background: linear-gradient(
+    180deg,
+    rgba(21, 0, 61, 0.9),
+    rgba(21, 0, 61, 0.6)
+  );
   display: flex;
   flex-direction: column;
   z-index: 2;
@@ -47,13 +51,13 @@
   margin-bottom: 1.9rem;
 }
 
-.b-join__form__error-message {
-  display: none;
-}
+// .b-join__form__error-message {
+//   display: none;
+// }
 
 .invalid.b-join__form__form-group__input {
   margin-bottom: 0;
-  border: 4px solid rgba(235, 89, 62, .5);
+  border: 4px solid rgba(235, 89, 62, 0.5);
 }
 .invalid.b-join__form__form-group__input + .b-join__form__error-message {
   display: block;
@@ -61,11 +65,11 @@
 
 .b-join__form h2,
 .b-join__form h3 {
-  margin: .2em 0 0 0;
+  margin: 0.2em 0 0 0;
 }
 
 .b-join__form h2 {
-  margin-bottom: .5em;
+  margin-bottom: 0.5em;
 }
 
 .b-join__form h3:last-of-type {
@@ -79,19 +83,20 @@
 
 /* To get the warning under the radio buttons to go below them both*/
 .b-join__join-sex-female {
-  margin-top: .4em;
+  margin-top: 0.4em;
   display: flex;
   flex-wrap: wrap;
 }
 
-.b-join__join-sex-female label {
-  margin-left: .3em;
+.b-join__join-sex-female label,
+.b-join__join-sex-male label {
+  margin-left: 0.3em;
 }
 
 .b-join__form__form-group__sex small {
   display: block;
   font-size: 1.2rem;
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
 }
 
 .b-join__join-sex-female span {
@@ -99,10 +104,14 @@
   flex: 1 0 100%;
 }
 
-.b-join__join-sex-female
+.b-join__join-sex-female .b-join__identifying-gender__container {
+  margin-top: 0.5em;
+}
 
 .b-join__identifying-gender__container {
-  margin-top: .5em;
+  & label {
+    margin-left: 1rem;
+  }
 }
 
 .b-join__identifying-gender {
@@ -111,7 +120,7 @@
   border-left: 1px solid #fff;
   border-bottom: 1px solid #fff;
   border-right: 1px solid #fff;
-  padding: .5em;
+  padding: 0.5em;
 }
 
 .b-join__identifying-gender__hidden {
@@ -119,19 +128,19 @@
 }
 
 .b-join__identifying-gender p {
-  margin: .4em 0 .2em;
+  margin: 0.4em 0 0.2em;
   font-style: italic;
   font-size: 1.4rem;
 }
 
 .b-join__identifying-gender input {
-  margin: .2em;
+  margin: 0.2em;
 }
 
 .b-join__form__form-group__email small {
   display: block;
   font-size: 1.2rem;
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
 }
 
 .b-join__form__submit {
@@ -141,7 +150,7 @@
 .b-join__mars-bcg {
   position: fixed;
   bottom: -10px;
-  margin:0;
+  margin: 0;
   width: 90%;
   z-index: 1;
 }
